--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,24 @@ if(WIN32)
         set(SDL2_TTF_LIBRARY_DLL "${sdl2_ttf_SOURCE_DIR}/lib/x86/SDL2_ttf.dll")
     endif()
 
+    # Add SDL2_mixer
+FetchContent_Declare(
+    SDL2_mixer
+    URL https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-devel-2.8.0-VC.zip
+    DOWNLOAD_NO_PROGRESS ON
+    DOWNLOAD_DIR ${CMAKE_BINARY_DIR}/downloads
+)
+FetchContent_MakeAvailable(SDL2_mixer)
+set(SDL2_MIXER_INCLUDE_DIR ${sdl2_mixer_SOURCE_DIR}/include)
+if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    set(SDL2_MIXER_LIBRARIES "${sdl2_mixer_SOURCE_DIR}/lib/x64/SDL2_mixer.lib")
+    set(SDL2_MIXER_LIBRARY_DLL "${sdl2_mixer_SOURCE_DIR}/lib/x64/SDL2_mixer.dll")
+else()
+    set(SDL2_MIXER_LIBRARIES "${sdl2_mixer_SOURCE_DIR}/lib/x86/SDL2_mixer.lib")
+    set(SDL2_MIXER_LIBRARY_DLL "${sdl2_mixer_SOURCE_DIR}/lib/x86/SDL2_mixer.dll")
+endif()
+
+
     find_package(VLD CONFIG)
 
     set(IMGUI_SRC
@@ -130,6 +148,7 @@ if(WIN32)
         ${SDL2_INCLUDE_DIR}
         ${SDL2_IMAGE_INCLUDE_DIR}
         ${SDL2_TTF_INCLUDE_DIR}
+        ${SDL2_MIXER_INCLUDE_DIR}
         ImGui
     )
 
@@ -138,6 +157,7 @@ if(WIN32)
         ${SDL2_LIBRARIES}
         ${SDL2_IMAGE_LIBRARIES}
         ${SDL2_TTF_LIBRARIES}
+        ${SDL2_MIXER_LIBRARIES}
         ${VLD_LIBRARY}
         ImGui
     )
@@ -246,6 +266,7 @@ set(DLL_DEPENDENCIES
     ${SDL2_LIBRARY_DLL}
     ${SDL2_IMAGE_LIBRARY_DLL}
     ${SDL2_TTF_LIBRARY_DLL}
+    ${SDL2_MIXER_LIBRARY_DLL}
 )
 
 set_target_properties(${TARGET_NAME} PROPERTIES
