--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,30 @@ if(WIN32)
 		set(SDL2_MIXER_LIBRARY_DLL "${sdl2_mixer_SOURCE_DIR}/lib/x86/SDL2_mixer.dll")
 	endif()
 
+    set(IMGUI_SRC
+        ${imgui_SOURCE_DIR}/imconfig.h
+        ${imgui_SOURCE_DIR}/imgui_demo.cpp
+        ${imgui_SOURCE_DIR}/imgui_draw.cpp
+        ${imgui_SOURCE_DIR}/imgui_internal.h
+        ${imgui_SOURCE_DIR}/imstb_rectpack.h
+        ${imgui_SOURCE_DIR}/imstb_textedit.h
+        ${imgui_SOURCE_DIR}/imstb_truetype.h
+        ${imgui_SOURCE_DIR}/imgui_tables.cpp
+        ${imgui_SOURCE_DIR}/imgui.cpp
+        ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+        ${imgui_SOURCE_DIR}/imgui.h
+
+        # Backends
+        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl2.h
+        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl2.cpp
+        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdlrenderer2.cpp
+        ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
+    )
+
+    add_library(ImGui STATIC ${IMGUI_SRC})
+    target_include_directories(ImGui PUBLIC ${imgui_SOURCE_DIR} ${SDL2_INCLUDE_DIR})
+    target_link_libraries(ImGui PRIVATE ${SDL2_LIBRARIES})
+
     find_package(VLD CONFIG)
 
     # Set all include directories
@@ -126,6 +150,7 @@ if(WIN32)
         ${SDL2_IMAGE_INCLUDE_DIR}
         ${SDL2_TTF_INCLUDE_DIR}
         ${SDL2_MIXER_INCLUDE_DIR}
+        ImGui
     )
 
     # Set libraries to link with
@@ -135,6 +160,7 @@ if(WIN32)
         ${SDL2_TTF_LIBRARIES}
         ${SDL2_MIXER_LIBRARIES}
         ${VLD_LIBRARY}
+        ImGui
     )
 elseif(NOT EMSCRIPTEN)
 
@@ -175,88 +201,24 @@ elseif(NOT EMSCRIPTEN)
     target_link_libraries(${TARGET_NAME} PUBLIC
         SDL2::SDL2main SDL2::SDL2 SDL2_image::SDL2_image SDL2_ttf::SDL2_ttf
     )
+
+
+	# Link with OpenGL
+	target_link_libraries(${TARGET_NAME} PUBLIC opengl32)
+
+	# Add OpenGL
+	find_package(OpenGL REQUIRED)
+	target_link_libraries(${TARGET_NAME} PUBLIC OpenGL::GL)
+
+	# Link with XInput
+	target_link_libraries(${TARGET_NAME} PUBLIC XInput)
 endif()
 
-target_include_directories(${TARGET_NAME} PRIVATE
-  ${CMAKE_SOURCE_DIR}/Minigin/
-)
+target_include_directories(${TARGET_NAME} PUBLIC ${glm_SOURCE_DIR}) 
+target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_include_directories(${TARGET_NAME} PUBLIC
-    ${glm_SOURCE_DIR}
-)
-
-    set(IMGUI_SRC
-        ${imgui_SOURCE_DIR}/imconfig.h
-        ${imgui_SOURCE_DIR}/imgui_demo.cpp
-        ${imgui_SOURCE_DIR}/imgui_draw.cpp
-        ${imgui_SOURCE_DIR}/imgui_internal.h
-        ${imgui_SOURCE_DIR}/imstb_rectpack.h
-        ${imgui_SOURCE_DIR}/imstb_textedit.h
-        ${imgui_SOURCE_DIR}/imstb_truetype.h
-        ${imgui_SOURCE_DIR}/imgui_tables.cpp
-        ${imgui_SOURCE_DIR}/imgui.cpp
-        ${imgui_SOURCE_DIR}/imgui_widgets.cpp
-        ${imgui_SOURCE_DIR}/imgui.h
-
-        # Backends
-        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl2.h
-        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl2.cpp
-        ${imgui_SOURCE_DIR}/backends/imgui_impl_sdlrenderer2.cpp
-        ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
-    )
-
-    add_library(ImGui STATIC ${IMGUI_SRC})
-    target_include_directories(ImGui PUBLIC ${imgui_SOURCE_DIR} ${SDL2_INCLUDE_DIR})
-    target_link_libraries(ImGui PRIVATE ${SDL2_LIBRARIES})
-
-# Compile at max warning level + treat warnings as errors
-target_compile_options(${TARGET_NAME} PRIVATE
-    $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX /EHsc>
-    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic -Werror>
-)
-
-## Link with OpenGL
-#target_link_libraries(${TARGET_NAME} PUBLIC opengl32)
-#
-## Add OpenGL
-#find_package(OpenGL REQUIRED)
-#target_link_libraries(${TARGET_NAME} PUBLIC OpenGL::GL)
-#
-## Link with XInput
-#target_link_libraries(${TARGET_NAME} PUBLIC XInput)
-
-if(EMSCRIPTEN)
-    set(EMSCRIPTEN_COMPILE_FLAGS "${EMSCRIPTEN_COMPILE_FLAGS} -sUSE_SDL=2 -sUSE_SDL_IMAGE=2 -sUSE_SDL_TTF=2 -sUSE_SDL_MIXER=2 -pthread -g")
-    set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -sUSE_SDL=2 -sUSE_SDL_IMAGE=2 -sUSE_SDL_TTF=2 -sUSE_SDL_MIXER=2 -pthread -sALLOW_MEMORY_GROWTH --preload-file \"${CMAKE_SOURCE_DIR}/Data@/\" -sSDL2_IMAGE_FORMATS=['tga','png'] -g")
-
-    # Work around https://github.com/emscripten-core/emscripten/issues/11513
-    set(EMSCRIPTEN_LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS} -fno-stack-protector")
-
-    # Use the Emscripten toolchain
-    set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/EmscriptenToolchain.cmake)
-
-    # Additional settings for Emscripten build
-    set_target_properties(${TARGET_NAME} PROPERTIES
-        COMPILE_FLAGS "${EMSCRIPTEN_COMPILE_FLAGS}"
-        LINK_FLAGS "${EMSCRIPTEN_LINK_FLAGS}"
-    )
-
-    # Have emscripten generate a html page too.
-    set(CMAKE_EXECUTABLE_SUFFIX ".html")
-
-elseif(WIN32)
+if(WIN32)
     set_target_properties(${TARGET_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:${TARGET_NAME}>")
-
-    ## Add post build commands
-    #add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
-    #    COMMAND "${CMAKE_COMMAND}" -E copy "${SDL2_LIBRARY_DLL}" "$<TARGET_FILE_DIR:${TARGET_NAME}>"
-    #)
-    #add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
-    #    COMMAND "${CMAKE_COMMAND}" -E copy "${SDL2_IMAGE_LIBRARY_DLL}" "$<TARGET_FILE_DIR:${TARGET_NAME}>"
-    #)
-    #add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
-    #    COMMAND "${CMAKE_COMMAND}" -E copy "${SDL2_TTF_LIBRARY_DLL}" "$<TARGET_FILE_DIR:${TARGET_NAME}>"
-    #)
 endif()
 
 #Set DLL var so others linking against this library can use it to copy the DLL's next to their exe
@@ -271,10 +233,10 @@ set_target_properties(${TARGET_NAME} PROPERTIES
     RUNTIME_DLLS "${DLL_DEPENDENCIES}"
 )
 
-## Define target architecture
-#if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-#    # Ensure SDL2 include directory is properly set  
-#    target_compile_definitions(${TARGET_NAME} PRIVATE _AMD64_)
-#else()
-#    target_compile_definitions(${TARGET_NAME} PRIVATE _X86_)
-#endif()
+# Define target architecture
+if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    # Ensure SDL2 include directory is properly set  
+    target_compile_definitions(${TARGET_NAME} PRIVATE _AMD64_)
+else()
+    target_compile_definitions(${TARGET_NAME} PRIVATE _X86_)
+endif()
